@@ -3,8 +3,10 @@ workout (0.13) unstable; urgency=low
   * removed superflous Null Store
   * merged Store::Memory into Store
   * made some wkinfo output optional for speed
+  * Store->chunk_add() no longer clones the chunk!!!!
+  * removed now unneeded Store->_chunk_add
 
- -- Rainer Clasen <bj@zuto.de>  Fri, 04 Dec 2009 18:35:28 +0100
+ -- Rainer Clasen <bj@zuto.de>  Sun, 06 Dec 2009 21:19:29 +0100
 
 workout (0.12) unstable; urgency=low
 
